[project]
name = "ctfbox"
version = "1.3.0"
description = ""
authors = [
    {name = "Syclover", email = "toloveu29@gmail.com"},
]
dependencies = [
    "requests<3.0.0,>=2.25.1",
    "PyJWT<3.0.0,>=2.0.1",
]
dev-dependencies = [
    "icecream<3.0.0,>=2.0.0",
]
requires-python = ">=3.7"
dynamic = ["classifiers"]
license = {text = "MIT"}
readme = "README.md"

[project.urls]
homepage = "https://github.com/WAY29/ctfbox"

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
[tool.pdm.scripts] 
publish = {shell = "pdm build && twine upload dist/*"} 
