[project]
name = "ctfbox"
version = "1.7.0"
description = "A box for CTF challenges with some sugar functions, Just enjoy it"
authors = [
    "Syclover <>",
    "Longlone <toloveu29@gmail.com>",
    "pjx <pjx3231@163.com>",
    "lingze <lingze.wl@gmail.com>",
    "F4ded <452584023@qq.com>",
    "AFKL <afkl1919@qq.com>",
]
dependencies = [
    "requests<3.0.0,>=2.25.1",
    "PyJWT<3.0.0,>=2.0.1",
    "python-engineio==3.14.2",
    "python-socketio[client]==4.6.0",
]
dev-dependencies = [
    "icecream<3.0.0,>=2.0.0",
]
requires-python = ">=3.7"
dynamic = ["classifiers"]
license = {text = "MIT"}
readme = "README.md"

[project.urls]
homepage = "https://github.com/WAY29/ctfbox"

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
[tool.pdm.scripts] 
publish = {shell = "pdm build && twine upload dist/*"} 
